--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href="/">HOME</a> |
+        <a href="/register">REGISTER</a> |
+        <a href="/login">LOGIN</a>
+    </nav>
     <h1>work</h1>
 </body>
 </html>
