--- a/views/login.html
+++ b/views/login.html
@@ -17,19 +17,19 @@
     <form>
         <div class="user-detail">
             <h2>PLEASE LOG IN</h2>
+           
             <form action="/login" method="PATCH" preventDefault()>
-                <label>Full Name:</label>
-                <input type="text" placeholder="Enter Full Name" name="user_fullname" required> <br>
+                <label>Full Name: </label>
+                <input type="text" placeholder="Enter Your First Name" name="user_fullname" required> <br>
 
-                <label>Email:</label>
-                <input type="email" placeholder="Enter Email Address" name="email" required> <br>
+                <label>Email Address: </label>
+                <input type="email" placeholder="Enter Your Email Address" name="email" required> <br>
 
-                <label>Password</label>
+                <label>Password: </label>
                 <input type="password" placeholder="Enter Your Password" name="password" required> <br>
 
                 <button type="submit">Submit</button>
-        </div>
-    </form>
+            </form>
 </body>
 
 </html>
