--- a/views/login.html
+++ b/views/login.html
@@ -14,22 +14,22 @@
         <a href="/register">REGISTER</a> |
         <a href="/login">LOGIN</a>
     </nav>
-    <form>
-        <div class="user-detail">
-            <h2>PLEASE LOG IN</h2>
-           
-            <form action="/login" method="PATCH" preventDefault()>
-                <label>Full Name: </label>
-                <input type="text" placeholder="Enter Your First Name" name="user_fullname" required> <br>
+    <div class="user-detail">
+        <h2>PLEASE LOG IN</h2>
 
-                <label>Email Address: </label>
-                <input type="email" placeholder="Enter Your Email Address" name="email" required> <br>
+        <form action="/login" method="POST">
+            <!-- <label>Full Name: </label>
+                <input type="text" placeholder="Enter Your First Name" name="user_fullname" required> <br> -->
 
-                <label>Password: </label>
-                <input type="password" placeholder="Enter Your Password" name="password" required> <br>
+            <label>Email Address: </label>
+            <input type="email" placeholder="Enter Your Email Address" name="email" required> <br>
 
-                <button type="submit">Submit</button>
-            </form>
+            <label>Password: </label>
+            <input type="password" placeholder="Enter Your Password" name="password" required> <br>
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 
 </html>
